--- a/index.html
+++ b/index.html
@@ -6,16 +6,20 @@
     <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="css/styles.css" />
-    <link rel="icon" href="image/favicon.ico" />
+    <link rel="icon" href="css/favicon.ico" />
   </head>
   <body>
-    <div class="test">
-      <p>I am Brany Suero.</p>
-      <p>I am a programmer.</p>
-      <p>adsasd</s></p>
-      <p>adsasd</s></p>
-      <p></p>
+    <div class="topContainer">
+      <img src="images/cloud.png" alt="cloud-pic" class="cloud0" />
+      <h1>I am Brany Suero.</h1>
+      <p>I am a <span class="pro">pro</span>grammer.</p>
+      <img src="images/cloud.png" alt="cloud-pic" class="cloud1" />
+      <img src="images/mountain.png" alt="mountain-pic" class="mountain" />
     </div>
+
+    <div class="middleContainer"></div>
+
+    <div class="bottomContainer"></div>
 
     <script src="main.js"></script>
   </body>
