--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Page Title</title>
+    <title>Brany's page</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="icon" href="css/favicon.ico" />
@@ -24,7 +24,12 @@
 
     <div class="middle-container">
       <div class="profile">
-        <img class="img" src="images/anypic.jpeg" alt="img profile" />
+        <img
+          class="img"
+          src="images/anypic.jpeg"
+          alt="img profile"
+          id="photoOfMyself"
+        />
 
         <h2>Hello.</h2>
         <p>
